--- a/practice_1/public/index.html
+++ b/practice_1/public/index.html
@@ -11,7 +11,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <h1 class="bg-primary text-white display-4">課題 1</h1>
-  <div class="container mt-3">
+  <div class="container my-3">
     <div id="root"></div>
   </div>
 </body>
